--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Funadamentos de JavaScript - .&lt;230314 &gt;</title>
     <link rel="icon" href="/ASSETS/images_canon_camera_1746 (1).ico">
 </head>
 
