--- a/index.html
+++ b/index.html
@@ -22,4 +22,5 @@
 </body>
 <script src="/JS/Ejercicio 01.js"></script>
 <script src="JS/tipos de datos.js"></script>
+<script src="/JS/Ejercicio03.js"></script>
 </html>>
