--- a/index.html
+++ b/index.html
@@ -23,4 +23,5 @@
 <script src="/JS/Ejercicio 01.js"></script>
 <script src="JS/tipos de datos.js"></script>
 <script src="/JS/Ejercicio03.js"></script>
+<script src="/JS/Ejercicio04.js"></script>
 </html>>
